2014-06-10  Andy Buckley  <andy.buckley@cern.ch>

	* Fix use of the install command for bash completion installation on Macs.

2014-06-07  Andy Buckley  <andy.buckley@cern.ch>

	* Removing direct includes of MathUtils.hh and others from analysis code files.

2014-06-02  Andy Buckley  <andy.buckley@cern.ch>

	* Rivet 2.1.2 release!

2014-05-30  Andy Buckley  <andy.buckley@cern.ch>

	* Using Particle absrap(), abseta() and abspid() where automatic conversion was feasible.

	* Adding a few extra kinematics mappings to ParticleBase.

	* Adding p3() accessors to the 3-momentum on FourMomentum, Particle, and Jet.

	* Using Jet and Particle kinematics methods directly (without momentum()) where possible.

	* More tweaks to make-plots 2D histo parsing behaviour.

2014-05-30  Holger Schulz  <hschulz@physik.hu-berlin.de>

	* Actually fill the XQ 2D histo, .plot decorations.

	* Have make-plots produce colourmaps using YODA_3D_SCATTER
	objects. Remove the grid in colourmaps.

	* Some tweaks for the SFM analysis, trying to contact Martin Wunsch
	who did the unfolding back then.

2014-05-29  Holger Schulz  <hschulz@physik.hu-berlin.de>

	* Re-enable 2D histo in MC_PDFS

2014-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* Updating analysis and project routines to use Particle::pid() by
	preference to Particle::pdgId(), and Particle::abspid() by
	preference to abs(Particle::pdgId()), etc.

	* Adding interfacing of smart pointer types and booking etc. for
	YODA 2D histograms and profiles.

	* Improving ParticleIdUtils and ParticleUtils functions based on
	merging of improved function collections from MCUtils, and
	dropping the compiled ParticleIdUtils.cc file.

2014-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* Adding CMS_2012_I1090423 (dijet angular distributions),
	CMS_2013_I1256943 (Zbb xsec and angular correlations),
	CMS_2013_I1261026 (jet and UE properties vs. Nch) and
	D0_2000_I499943 (bbbar production xsec and angular correlations).
