@@ -1,8 +1,8 @@
-SUBDIRS = rivet .
+SUBDIRS = rivet
 
 if ENABLE_PYEXT
 
-PYEXT_ENV = CC="$(CC)" CXX="$(CXX)" ARCHFLAGS=""
+PYEXT_ENV = CC="$(CC)" CXX="$(CXX)" CXXFLAGS="$(PYEXT_CXXFLAGS)" ARCHFLAGS=""
 
 ## Always force setup.py, it's not good at guessing what needs to rebuild
 all-local:
@@ -13,14 +13,14 @@ install-exec-local:
 
 uninstall-local:
 	rm -rf $(DESTDIR)$(RIVET_PYTHONPATH)/rivet
+	rm -f  $(DESTDIR)$(RIVET_PYTHONPATH)/rivet-$(VERSION)-py$(PYTHON_VERSION).egg-info
 
 clean-local:
-	$(PYEXT_ENV) $(PYTHON) setup.py clean --all
 	rm -f $(builddir)/*.pyc
 	rm -rf $(builddir)/build
 	rm -rf dist
 
 distclean-local:
-	rm -rf rivet.egg-info
+	rm -f rivet.egg-info
 
 endif
