@@ -15,8 +15,24 @@ core.cpp:
 endif
 
 
-all-local: core.cpp
-	@true
 
-clean-local:
-	rm -f core.cpp
+
+## fixes for out-of-source builds, especially "make distcheck"
+
+all-local: fix-out-of-source
+
+FIXSOURCES = $(EXTRA_DIST) 
+
+fix-out-of-source: $(FIXSOURCES)
+	rm -f $@
+	for i in $^; do \
+	  orig="$$i"; \
+	  build="$$(basename $$i)"; \
+	  if [ ! -e $${build} ]; then cp $${orig} $${build}; \
+	  echo $${build} >> $@; fi; \
+	done
+	touch $@
+
+clean-local: fix-out-of-source
+	if [ -e $< ]; then if [ -n "$$(cat $<)" ]; then rm -f $$(cat $<); fi; fi
+	rm -f $<
